--- a/index.html
+++ b/index.html
@@ -69,7 +69,33 @@
     </div>
 </header>
 <main class="content">
-
+    <section class="section head-section">
+        <div class="container">
+            <div class="head-container">
+                <div class="head-content">
+                    <div class="tag head__tag">
+                        # no noise
+                    </div>
+                    <div class="head__title">
+                        <h1>
+                            The most convenient exchange for spot trading
+                        </h1>
+                    </div>
+                    <div class="head__subtitle">
+                        <p>
+                            Fuex.io is a minimalist exchange with a commission of only 0.001%. Both futures and spot trading. Clearly, carelessly, simply.
+                        </p>
+                    </div>
+                    <a href="#" class="button button--green head__button">
+                        Start trading
+                    </a>
+                </div>
+                <div class="head__image">
+                    <img src="img/headimg.svg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
 <script>
     var adminAjax = admin_ajax = '';
