head section finished

--- a/index.html
+++ b/index.html
@@ -69,7 +69,14 @@
     </div>
 </header>
 <main class="content">
-    <section class="section head-section">
+    <section class="section head-section" >
+        <div class="head-section-decor" style="background-image: url(img/stars.png);">
+            <span><img src="img/gradient1.png" alt=""></span>
+            <span><img src="img/gradient2.png" alt=""></span>
+        </div>
+        <div class="head-section-decor-text">
+            <img src="img/crypto-text.svg" alt="">
+        </div>
         <div class="container">
             <div class="head-container">
                 <div class="head-content">
