head section fix

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
     </div>
 </header>
 <main class="content">
-    <section class="section head-section" >
+    <section class="section head-section">
         <div class="head-section-decor" style="background-image: url(img/stars.png);">
-            <span><img src="img/gradient1.png" alt=""></span>
+            <span><img src="img/gradient11.png" alt=""></span>
             <span><img src="img/gradient2.png" alt=""></span>
         </div>
         <div class="head-section-decor-text">
@@ -90,7 +90,8 @@
                     </div>
                     <div class="head__subtitle">
                         <p>
-                            Fuex.io is a minimalist exchange with a commission of only 0.001%. Both futures and spot trading. Clearly, carelessly, simply.
+                            Fuex.io is a minimalist exchange with a commission of only 0.001%. Both futures and spot
+                            trading. Clearly, carelessly, simply.
                         </p>
                     </div>
                     <a href="#" class="button button--green head__button">
@@ -99,6 +100,103 @@
                 </div>
                 <div class="head__image">
                     <img src="img/headimg.svg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section advantages-section section-padding">
+        <div class="container">
+            <div class="title advantages__title">
+                <h2 style="text-align: center">Why fuex.io?</h2>
+            </div>
+            <div class="advantages">
+                <div class="advantages-item">
+                    <div class="advantages-item__image">
+                        <img src="img/advantages-img1.png" alt="">
+                    </div>
+                    <div class="advantages-item-content">
+                        <div class="advantages-item__title">
+                            Transparent security
+                        </div>
+                        <div class="advantages-item__text">
+                            <p>
+                                2FA, cold wallets, and session control. Your funds are protected.
+                            </p>
+                        </div>
+                        <div class="advantages-item-controls">
+                            <div class="tag"># 2FA</div>
+                            <div class="tag"># access control</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="advantages-item">
+                    <div class="advantages-item__image">
+                        <img src="img/advantages-img3.png" alt="">
+                    </div>
+                    <div class="advantages-item-content">
+                        <div class="advantages-item__title">
+                            Trading without the noise
+                        </div>
+                        <div class="advantages-item__text">
+                            <p>
+                                No futures, tokens, margin or native coin. Only real spot trading.
+                            </p>
+                        </div>
+                        <div class="advantages-item-controls">
+                            <div class="tag"># no futures</div>
+                            <div class="tag"># spot only </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="advantages-item">
+                    <div class="advantages-item__image">
+                        <img src="img/advantages-img2.png" alt="">
+                    </div>
+                    <div class="advantages-item-content">
+                        <div class="advantages-item__title">
+                            Unprecedentedly low commission
+                        </div>
+                        <div class="advantages-item__text">
+                            <p>
+                                0.001% is one of the lowest rates in the world. Less costs - more profit.
+                            </p>
+                        </div>
+                        <div class="advantages-item-controls">
+                            <div class="tag"># 0.001% fee</div>
+                            <div class="tag"># minimum costs</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section trends-section section-padding">
+        <div class="container">
+            <div class="title trends__title">
+                <h3>Track trends, pick top coins</h3>
+            </div>
+            <div class="trends-row">
+                <div class="trends-table">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Coin</th>
+                                <th>Price</th>
+                                <th>Trading history for 24 h.</th>
+                                <th>Changes in 24 h.</th>
+                                <th>
+                                    <form  class="trends-table-search">
+                                        <label>
+                                            <input type="text">
+                                        </label>
+                                        <button type="submit">
+                                            <img src="img/search.svg" alt="">
+                                        </button>
+                                    </form>
+                                </th>
+                            </tr>
+                        </thead>
+                    </table>
                 </div>
             </div>
         </div>
